--- a/index.html
+++ b/index.html
@@ -27,18 +27,19 @@
 	  
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html"><span>Z</span>ahra Rusli</a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav nav ml-auto">
-	          <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
+	        <!---  
+			<li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
 	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
-	        </ul>
+	        -->
+			</ul>
 	      </div>
 	    </div>
 	  </nav>
@@ -48,13 +49,14 @@
         <div class="row no-gutters slider-text js-fullheight justify-content-center align-items-center">
           <div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-center">
           	<div class="text text-center">
-          		<span class="subheading">Hey! I am</span>
-		  				<h1>Ronaldo Fredrickson</h1>
-			  				<h2>I'm a 
+          		<span class="subheading" style="color:#E6666F;">Hallo, Saya</span>
+		  				<h1 style="color:#s;" >Zahra Rusli</h1>
+			  				<h2 style="color:#E6666F;">Saya Seorang
 								  <span
 								     class="txt-rotate"
+									 style="color:#E743A1;"
 								     data-period="2000"
-								     data-rotate='[ "Web Designer.", "Developer.", "Photographer.", "Marketer.", "Blogger" ]'></span>
+								     data-rotate='[ "Apoteker." ]'></span>
 								</h2>
 							</div>
             </div>
@@ -74,7 +76,7 @@
     			<div class="col-md-6 col-lg-6 d-flex">
     				<div class="img-about img d-flex align-items-stretch">
     					<div class="overlay"></div>
-	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/about.jpg);">
+	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/about.jpeg);">
 	    				</div>
     				</div>
     			</div>
@@ -82,25 +84,27 @@
     				<div class="row justify-content-start pb-3">
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
-		            <h2 class="mb-4">About Me</h2>
-		            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+		            <h2 class="mb-4">Tentang Saya</h2>
+		            <p>Saya adalah seorang Apoteker dengan
+						pengalaman kerja selama 1,5 Tahun.</p>
+					<p>
+						Saya adalah seorang yang komunikatif,
+						inovatif dan suka bekerjasama dalam
+						sebuah tim.</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
-		            	<li class="d-flex"><span>Name:</span> <span>Ronaldo Fredrickson</span></li>
-		            	<li class="d-flex"><span>Date of birth:</span> <span>November 28, 1989</span></li>
-		            	<li class="d-flex"><span>Address:</span> <span>San Francisco CA 97987 USA</span></li>
-		            	<li class="d-flex"><span>Zip code:</span> <span>1000</span></li>
-		            	<li class="d-flex"><span>Email:</span> <span>ronaldo@gmail.com</span></li>
-		            	<li class="d-flex"><span>Phone: </span> <span>+1-2234-5678-9-0</span></li>
+		            	<li class="d-flex"><span>Nama:</span> <span>Zahra Rusli</span></li>
+		            	<li class="d-flex"><span>Tanggal Lahir:</span> <span>03 Maret 1996 </span></li>
+		            	<li class="d-flex"><span>Alamat:</span> <span>Jl. Telaga Biruhun, Simpang Rumbio,Kota Solok</span></li>
+		            	<li class="d-flex"><span>Jenis Kelamin:</span> <span>Perempuan</span></li>
+		            	<li class="d-flex"><span>Email:</span> <span>zahra.rusli03@gmail.com</span></li>
+		            	<li class="d-flex"><span>Hp: </span> <span>0823-8230-4233</span></li>
 		            </ul>
 		          </div>
 		        </div>
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
-              	<p class="mb-4">
-	                <span class="number" data-number="120">0</span>
-	                <span>Project complete</span>
-                </p>
-                <p><a href="#" class="btn btn-primary py-3 px-3">Download CV</a></p>
+        
+                <p><a href="https://drive.google.com/file/d/11yISoznktXs47VJaGIowFYpd2E8Bpmtt/view?usp=sharing" target="_blank" class="btn btn-primary py-3 px-3">Download CV</a></p>
               </div>
 	          </div>
 	        </div>
@@ -108,7 +112,7 @@
     	</div>
     </section>
 
-    <section class="ftco-section ftco-partner">
+   <!-- <section class="ftco-section ftco-partner">
     	<div class="container">
     		<div class="row">
     			<div class="col-sm ftco-animate">
@@ -128,7 +132,7 @@
     			</div>
     		</div>
     	</div>
-    </section>
+    </section>-->
 
     <section class="ftco-section ftco-no-pb goto-here" id="resume-section">
     	<div class="container">
@@ -136,8 +140,8 @@
     			<div class="col-md-3">
 				    <nav id="navi">
 					    <ul>
-					      <li><a href="#page-1">Education</a></li>
-					      <li><a href="#page-2">Experience</a></li>
+					      <li><a href="#page-1" >Pendidikan</a></li>
+					      <li><a href="#page-2">Pengalaman Kerja</a></li>
 					      <li><a href="#page-3">Skills</a></li>
 					      <li><a href="#page-4">Awards</a></li>
 					    </ul>
@@ -145,29 +149,30 @@
 					</div>
 					<div class="col-md-9">
 					  <div id="page-1" class= "page one">
-					  	<h2 class="heading">Education</h2>
+					  	<h2 class="heading" style="color:#E6666F">Pendidikan</h2>
 					    <div class="resume-wrap d-flex ftco-animate">
+	    					<div class="icon d-flex align-items-center justify-content-center" style="background:#E6666F">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date" style="color:#E6666F" >Agustus 2018- Oktober 2019</span>
+		    					<h2>Proefesi Apoteker</h2>
+		    					<span class="position">STIFI Perintis Padang</span>
+		    					<p>Lulus Profesi Apoteker dengan IPK 3.85/4.00.</p>
+		    				</div>
+	    				</div>
+						<div class="resume-wrap d-flex ftco-animate">
 					    	<div class="icon d-flex align-items-center justify-content-center">
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">2014-2015</span>
+		    					<span class="date">September 2013-Maret 2018</span>
 		    					<h2>Bachelor of Science in Computer Science</h2>
 		    					<span class="position">Cambridge University</span>
 		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
 	    					</div>
 	    				</div>
-	    				<div class="resume-wrap d-flex ftco-animate">
-	    					<div class="icon d-flex align-items-center justify-content-center">
-					    		<span class="flaticon-ideas"></span>
-					    	</div>
-					    	<div class="text pl-3">
-		    					<span class="date">2014-2015</span>
-		    					<h2>Computer Processing Systems/Computer Software</h2>
-		    					<span class="position">Cambridge University</span>
-		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-		    				</div>
-	    				</div>
+	    				
 	    				<div class="resume-wrap d-flex ftco-animate">
 	    					<div class="icon d-flex align-items-center justify-content-center">
 					    		<span class="flaticon-ideas"></span>
