--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Contact</h1>
             <h2 class="mb-4">Contact Me</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+            <p>Tertarik untuk bekerja sama ? Hubungi di kontak berikut</p>
           </div>
         </div>
 
