--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date" style="color:#E6666F" >Januari 2020- Sekarang </span>
-		    					<h2>Apotek & Klinik Nadisa Farma </h2>
+		    					<h2>Apotek & Klinik Kecantikan Nadisa </h2>
 		    					<span class="position">Apoteker Penanggung Jawab</span>
 		    					<p>- Manajerial Apotek
 								<br>- Pelayanan Kefarmasian 
